# nittygriddy

./: .gitignore  setup.cfg  setup.py
nittygriddy/: __init__.py  __main__.py  datasets.py  run.py  utils.py
scripts/: nitty
