#
# setup.cfg
#

[metadata]
name = nittygriddy
summary = Convinient way to deploy your ALICE analysis locally
          (sequential and proof lite) or on the grid
url = https://github.com/courjau/nittygriddy
author = Christian Bourjau
author_email = christian.bourjau@cern.ch
license = GPLv3
keywords =
    alice
    cern
    grid
    proof
platform = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Development Status :: 4 - Beta
    Topic :: Software Development :: Libraries :: Python Modules


[options]
include_package_data = true
install_requires =
    rootpy
    pygments
    pyyaml
    future
tests_require =
    nose
